JumpScript/tests/baselines/reference/exportedBlockScopedDeclarations.errors.txt
tests/cases/compiler/exportedBlockScopedDeclarations.jump(1,13): error TS2448: Block-scoped variable 'foo' used before its declaration.
tests/cases/compiler/exportedBlockScopedDeclarations.jump(2,20): error TS2448: Block-scoped variable 'bar' used before its declaration.
tests/cases/compiler/exportedBlockScopedDeclarations.jump(4,15): error TS2448: Block-scoped variable 'bar' used before its declaration.
tests/cases/compiler/exportedBlockScopedDeclarations.jump(7,22): error TS2448: Block-scoped variable 'bar' used before its declaration.
tests/cases/compiler/exportedBlockScopedDeclarations.jump(10,12): error TS2448: Block-scoped variable 'foo1' used before its declaration.
tests/cases/compiler/exportedBlockScopedDeclarations.jump(11,19): error TS2448: Block-scoped variable 'bar1' used before its declaration.
tests/cases/compiler/exportedBlockScopedDeclarations.jump(13,14): error TS2448: Block-scoped variable 'bar1' used before its declaration.
tests/cases/compiler/exportedBlockScopedDeclarations.jump(16,21): error TS2448: Block-scoped variable 'bar1' used before its declaration.


==== tests/cases/compiler/exportedBlockScopedDeclarations.jump (8 errors) ====
    const foo = foo; // compile error
                ~~~
!!! error TS2448: Block-scoped variable 'foo' used before its declaration.
    export const bar = bar; // should be compile error
                       ~~~
!!! error TS2448: Block-scoped variable 'bar' used before its declaration.
    function f() {
      const bar = bar; // compile error
                  ~~~
!!! error TS2448: Block-scoped variable 'bar' used before its declaration.
    }
    namespace NS {
      export const bar = bar; // should be compile error
                         ~~~
!!! error TS2448: Block-scoped variable 'bar' used before its declaration.
    }
    
    let foo1 = foo1; // compile error
               ~~~~
!!! error TS2448: Block-scoped variable 'foo1' used before its declaration.
    export let bar1 = bar1; // should be compile error
                      ~~~~
!!! error TS2448: Block-scoped variable 'bar1' used before its declaration.
    function f1() {
      let bar1 = bar1; // compile error
                 ~~~~
!!! error TS2448: Block-scoped variable 'bar1' used before its declaration.
    }
    namespace NS1 {
      export let bar1 = bar1; // should be compile error
                        ~~~~
!!! error TS2448: Block-scoped variable 'bar1' used before its declaration.
    }